Creating book API routes

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,20 +5,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shelf Swap</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 </head>
 
 <body>
   <h1>Shelf Swap</h1>
-  <form action="api/users/register" method="POST">
-    <label for="fname">First:</label>
-    <input type="text" name="fname">
-    <label for="lname">Last:</label>
-    <input type="text" name="lname">
-    <label for="email">Email:</label>
-    <input type="text" name="email">
-    <input type="submit" value="Submit">
-    <input type="submit" value="Sign in with Google" formmethod="GET" formaction="api/users/auth/google">
-  </form>
+
+  <div class="row">
+  <div class="col-sm-4">
+    <div class="card">
+      <div class="card-body">
+        <a class="btn btn-block" href="/api/users/auth/google" role="button">
+          <i class="fab fa-google"></i>
+          Sign In with Google
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 
 </html>
